# game-detection

./: .gitignore  Cargo.toml
src/: main.rs  models.rs  storage.rs  system.rs  tracker.rs
src/detectors/: amazon.rs  epic.rs  mod.rs  registry.rs  steam.rs  ubisoft.rs  xbox.rs
