[package]
name = "game-detection"
version = "0.1.0"
edition = "2024"

[dependencies]
wmi = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
winreg = "0.52"
walkdir = "2"
rusqlite = { version = "0.38.0", features = ["bundled"] }

[dependencies.windows]
version = "0.52"
features = [
    "Management_Deployment",
    "ApplicationModel",
    "Foundation",
    "Foundation_Collections",
    "Storage",
]
